--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav id="header-nav" class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
-          <a href="index1.html" class="pull-left visible-md visible-sm visible-xs">
+          <a href="index.html" class="pull-left visible-md visible-sm visible-xs">
           </a>
 
           <div class="navbar-brand">
